--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@pages": ["src/pages"],
+      "@constants": ["src/constants"],
+      "@components": ["src/components"]
+    },
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -22,5 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "src/**/*.ts", "src/**/*.tsx"]
 }
