--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,13 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@pages": ["src/pages"],
+      "@constants": ["src/constants"],
+      "@components": ["src/components"]
+    },
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
